--- a/scoreboard-client/src/components/GameCard.css
+++ b/scoreboard-client/src/components/GameCard.css
@@ -68,6 +68,7 @@
 }
 
 .team-score {
+    color: #17408B;
     font-size: 1.8rem;
     font-weight: 700;
     min-width: 60px;
